--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,87 @@ button[type=submit], .deliver, .delivernot {
     border-radius: 20px;
     margin-bottom: 10px;
 }
+.contact {
+    padding-top: 20px;
+}
+.contact-overlay {
+    height: inherit;
+    background-color: rgba(0, 0, 0, 0.7);
+}
+.custdata-overlay {
+    display: none;
+}
+#order-alert {
+    margin-left: 45%;
+}
+h1#online-delivery {
+    text-align: center;
+}
+@media (max-width: 740px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 1000px;
+        overflow-x: hidden;
+    }
+
+    #push {
+        padding-top: 40%;
+    }
+
+    .karibu-txt {
+        margin-top: 50px;
+    }
+
+    .menu-overlay {
+        width: 100%;
+        height: inherit;
+        background-color: rgba(0, 0, 0, 0.7);
+    }
+
+    .image-karibu {
+        margin-left: 20px;
+        margin-bottom: 10px;
+        height: 300px;
+        width: 270px;
+    }
+
+    .welcome {
+        padding-top: 10px;
+    }
+
+    .cdata {
+        padding: 10px 5px 10px 5px;
+    }
+
+}
+
+@media (min-width: 800px) and (max-width: 850px) {
+    html,
+    body,
+    header,
+    .view {
+        height: 650px;
+    }
+
+    .piz-pap {
+        font-size: 50px;
+    }
+
+    ul > .nav-items {
+        display: inline;
+        margin-right: 20px;
+        margin-left: 12px;
+    }
+}
+
+@media (max-width: 991px) {
+    .navbar:not(.top-nav-collapse) {
+        background: #3f51b5 !important;
+    }
+
+}
 
 
 
